# NeighborhoodAssociationConnect

./: README.md  ドキュメント.lnk
.github/ISSUE_TEMPLATE/: BugReport.md  config.yml
dev/: docker-compose.yml
dev/backend/: .gitignore  ControlUI.py  Dockerfile  FirestoreDatabase_add_edit_delete.py  NearRegions_Add_Delete_FastAPI_SwaggerUI.py  firebase_reading.py  main.py  pyproject.toml  地域共生_firebaseから情報取ってくる関数.ipynb
dev/backend/api/: shema.py
dev/backend/app/: main.py
dev/backend/app/api/: schema.py
dev/backend/app/api/v1/endpoints/: items.py  test.py
dev/backend/app/models/: model.py
dev/backend/app/services/: MCP_Client.py  QdrantManager.py  create_article.py  firebase_reading.py  prototype.py
dev/backend/app/tools/mcp_server/: Dockerfile  main.py  mcp_server.py  pyproject.toml
dev/backend/app/tools/mcp_server/mcp_server_qdrant/: Dockerfile  QdrantManager.py  main.py  pyproject.toml  schema.py  server.py
dev/backend/app/tools/mcp_server/mcp_server_web_search/: Dockerfile  duckduckgo.py  pyproject.toml  schema.py  server.py  websearcher.py
dev/backend/app/tools/ocr/: azure_vision_ocr.py
dev/dev/: docker-compose.yml
dev/dev/backend/: .env:Zone.Identifier  .gitignore  pyproject.toml
dev/dev/backend/app/: main.py
dev/dev/backend/app/services/: MCP_Client.py  firebase_reading.py
dev/frontend/my-expo-app/: app.config.ts  package-lock.json  package.json
dev/frontend/my-expo-app/app/: _layout.tsx  app.tsx  chat.tsx  (+3 more)
dev/frontend/my-test-app/: app.config.ts  package-lock.json  package.json
dev/frontend/react_app/: package-lock.json  package.json
(+51 files in other folders)
